--- a/blog.css
+++ b/blog.css
@@ -1,23 +1,26 @@
 body {
     border: 20px solid #bdc3c7;
-    width: 70%;
+    max-width: 700px;
+    width: 80%;
     margin: 20px auto;
-    padding: 5%;
+    padding: 20px;
     font-family: 'Source Sans Pro', sans-serif;
 }
 
 .date {
     text-transform: uppercase;
-    letter-spacing: 2px;
+    letter-spacing: 0.2rem;
     color: #3498db;
 }
 
 h1 {
     color: #2c3e50;
+    font-size: 2.0rem;
 }
 
 .first {
-    border-left: 3px solid #bdc3c7;
+    border-left: 5px solid #bdc3c7;
+    padding-left: 5px;
 }
 
 
