--- a/transparencyopacity.css
+++ b/transparencyopacity.css
@@ -1,4 +1,4 @@
-section {
+.one {
     width: 500px;
     height: 500px;
     background-color: magenta;
@@ -7,5 +7,56 @@ section {
 #rgba {
     width: 50%;
     height: 50%;
-    background-color: ;
+    background-color: rgba(255,255,255,0.7);
+    /*the rgba have the forth number as the leve of transparency - goes to 0 to 1 - only change the background, not other elements*/
+}
+
+#opacity {
+    width: 50%;
+    height: 50%;
+    background-color: yellow;
+    opacity: 0.3;
+    /*opacity goes from 0 to 1 - also imapcts other elements than background*/
+}
+
+.div {
+    width: 100px;
+    height: 100px;
+    background-color: #3d405b;
+    border: 2px solid black;
+    margin: 10px;
+    display: inline-block;
+}
+
+#middle {
+    background-color: #81b29a;
+}
+
+#static #middle {
+    position: static;
+    top: 100px;
+}
+
+#relative #middle {
+    position: relative;
+    top: 100px;
+    left: -50px;
+}
+
+#absolute {
+    position: relative;
+}
+
+#absolute #middle {
+    position: absolute;
+    top: 50px;
+    left: 50px;
+    /*the absolute is relative to its ancestor*/
+}
+
+#fixed #middle {
+    position: fixed;
+    top: 0;
+    left: 0;
+    /*position is relative to the container fixed*/
 }
