--- a/transition.css
+++ b/transition.css
@@ -3,9 +3,90 @@
     height: 300px; 
     background-color: magenta;
     transition: 1s;
+    /*da pra colocar delay a mudança, timing function, mudar e transition so no background....*/
 }
 
 .circle:hover {
     background-color: cyan;
     border-radius: 50%;
 }
+
+section div {
+    height: 100px;
+    width: 100px;
+    background-color: turquoise;
+    margin: 20px 0;
+    transition: margin-left 3s;
+}
+
+section:hover div {
+    margin-left: 500px;
+}
+
+div:nth-of-type(1) {
+    transition-timing-function: ease-in;
+}
+
+div:nth-of-type(2) {
+    transition-timing-function: ease-out;
+}
+
+div:nth-of-type(3) {
+    transition-timing-function: cubic-bezier(0.7, 0, 0.84, 0);
+}
+
+div:nth-of-type(4) {
+    transition-timing-function: cubic-bezier(0.85, 0, 0.15, 1);
+}
+
+
+h2 {
+    background-color: #2a9d8f;
+    border: 5px solid #264653;
+    color: #eae2b7;
+    padding: 0.7em;
+    width: 300px;
+    font-size: 1.8em;
+    text-align: center;
+    margin: 20px auto;
+    font-family: courier new;
+    font-weight: lighter;
+}
+
+
+
+h2:nth-of-type(2n) {
+    background-color: #e9c46a;
+}
+h2:nth-of-type(3n) {
+    background-color: #f4a261;
+}
+h2:nth-of-type(4n) {
+    background-color: #e76f51;
+}
+
+section:nth-of-type(2) h2:nth-of-type(1) {
+    transform: rotate(45deg);
+ }
+
+section:nth-of-type(2) h2:nth-of-type(2) {
+    transform: scale(0.5);
+ }
+ section:nth-of-type(2) h2:nth-of-type(3) {
+    transform: translateX(200px);
+ }
+ section:nth-of-type(2) h2:nth-of-type(4) {
+    transform: translate(-100px, 50px);
+ }
+ section:nth-of-type(3) h2:nth-of-type(1) {
+    transform: skew(30deg);
+ }
+ section:nth-of-type(3) h2:nth-of-type(2) {
+    transform: skew(10deg, 5deg);
+ }
+ section:nth-of-type(3) h2:nth-of-type(3) {
+    transform: rotate(-20deg) scale(1.3);
+ }
+ section:nth-of-type(3) h2:nth-of-type(4) {
+    transform: translateX(-500px) rotate(0.5turn) scaleY(1.5);
+ }
